src/test/deca/context/invalid/variable/invalid_assign_float_string.deca
// Description:
//    test invalid assignation between float and string
//    Test rule 3.28
//
// [Begin Result]
//invalid_assign_float_string.deca:13:13: Incompatible types, expected float but got string. Rule 3.28.
// [End Result]
//
// History:
//    cree le 06/01/2025

{
   float a = "true";
}
